--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.11",
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
